--- a/notebook/overview.ipynb
+++ b/notebook/overview.ipynb
@@ -708,6 +708,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49c69863",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Heatmap\n",
+    "#!pip install plotly\n",
+    "\n",
+    "import plotly.express as px\n",
+    "\n",
+    "fig = px.choropleth(\n",
+    "    state_counts,\n",
+    "    locations='State',\n",
+    "    locationmode='USA-states',\n",
+    "    color='count',\n",
+    "    color_continuous_scale='Blues',\n",
+    "    scope='usa',\n",
+    "    title='JP Morgan Consumer Complaints by State'\n",
+    ")\n",
+    "fig.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "b5d4d91f",
    "metadata": {},
