--- a/notebook/overview.ipynb
+++ b/notebook/overview.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5a527603",
+   "id": "eef4bb63",
    "metadata": {},
    "source": [
     "## Abstract"
@@ -10,32 +10,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc01bb6e",
+   "id": "9f55ad18",
    "metadata": {},
    "source": [
-    "This project analyzes consumer complaints submitted about JPMorgan Chase to the Consumer Financial Protection Bureau (CFPB) from 2011 to 2025. Using more than 59,000 complaints, I explore trends in complaint volume, identify the products and issues that generate the most dissatisfaction, examine state-level complaint concentration, and evaluate the company’s responsiveness and resolution outcomes. The analysis uses Python (pandas) for data cleaning and aggregation and seaborn/matplotlib for visualization. Findings show that complaint volume has grown over time. Complaints are heavily concentrated in checking and savings accounts, credit cards, and mortgages, while sub-issues such as deposit/withdrawal problems, unresolved credit card disputes, and account closures drive the largest volumes. Although JPMorgan responds timely to most complaints, many customers still dispute the company’s resolution, and most cases are closed with an explanation rather than monetary or non-monetary relief."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "30f9d2f7",
-   "metadata": {},
-   "source": [
-    "## Data "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5391c555",
-   "metadata": {},
-   "source": [
-    "The data comes from the CFPB Consumer Complaint Database, which collects complaints from customers about financial products and sends them to companies to respond.\n",
-    "\n",
-    "https://www.consumerfinance.gov/data-research/consumer-complaints/ \n",
-    "\n",
-    "I filtered the data to only include complaints where the company name contains “JPMorgan.” The time range is from 2011-12-01 to 2025-10-02. The data was downloaded using the CFPB API link provided.\n",
-    "\n",
-    "https://www.consumerfinance.gov/data-research/consumer-complaints/search/api/v1/?date_received_max=2025-10-02&date_received_min=2011-12-01&field=company&format=csv&no_aggs=true&search_term=jpmorgan&size=149956\n"
+    "This ipynb analyzes consumer complaints submitted about JPMorgan Chase to the Consumer Financial Protection Bureau (CFPB) from 2011 to 2025. Using 150,000 complaints, I explore trends in complaint volume, identify the products and issues that generate the most dissatisfaction, examine state-level complaint concentration, and evaluate the company’s responsiveness and resolution outcomes. The analysis uses Python (pandas) for data cleaning and aggregation and seaborn/matplotlib for visualization. "
    ]
   },
   {
@@ -43,7 +21,7 @@
    "id": "f8e94c63",
    "metadata": {},
    "source": [
-    "### Libraries"
+    "## Setting up"
    ]
   },
   {
@@ -900,26 +878,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f56963bd",
-   "metadata": {},
-   "source": [
-    "## Discussion"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e803a50a",
-   "metadata": {},
-   "source": [
-    "This analysis is meant for teams who want to understand customer problems and improve service quality. It highlights where most complaints come from, which issues cause the most frustration, and how customers react to the company’s responses.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "813dc017",
    "metadata": {},
    "source": [
-    "### Key Points"
+    "## Findings"
    ]
   },
   {
@@ -927,41 +889,7 @@
    "id": "66aadee6",
    "metadata": {},
    "source": [
-    "•\tComplaint volume is rising, especially in the past few years.\n",
-    "\n",
-    "•\tChecking and savings accounts, credit cards, and mortgages cause the most issues.\n",
-    "\n",
-    "•\tCalifornia, New York, Florida, and Texas have the highest complaint levels.\n",
-    "\n",
-    "•\tJPMorgan usually responds on time, but many customers still feel the issue is unresolved.\n",
-    "\n",
-    "•\tMost complaints are submitted online, and most responses are simply explanations, not relief."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5d2cef39",
-   "metadata": {},
-   "source": [
-    "### Conclusion"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "200db113",
-   "metadata": {},
-   "source": [
-    "The data suggests several areas where JPMorgan could improve:\n",
-    "\n",
-    "•\tMake everyday banking processes smoother, especially deposits, withdrawals, and dispute handling\n",
-    "\n",
-    "•\tProvide clearer or more helpful responses to reduce dispute rates\n",
-    "\n",
-    "•\tFocus on high-complaint states, especially California\n",
-    "\n",
-    "•\tStrengthen digital support since most customers use online channels\n",
-    "\n",
-    "Improving these areas could help reduce complaints and improve overall customer experience."
+    "Findings show that complaint volume has grown over time. Complaints are heavily concentrated in checking and savings accounts, credit cards, and mortgages, while sub-issues such as deposit/withdrawal problems, unresolved credit card disputes, and account closures drive the largest volumes. Although JPMorgan responds timely to most complaints, many customers still dispute the company’s resolution, and most cases are closed with an explanation rather than monetary or non-monetary relief."
    ]
   }
  ],
